# gst-vmbsrc

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.TEMPLATE  Dockerfile  EXAMPLES.md  INSTALLING.md  README.md  build.bat  build.sh
cmake/: FindGStreamer.cmake
src/: config.h.in  gstvimbasrc.c  gstvimbasrc.h  gstvimbaxsrc.c  gstvimbaxsrc.h  gstvmbsrc.c  gstvmbsrc.h  helpers.h  pixelformats.c  pixelformats.h  vimba_helpers.c  vimba_helpers.h  vimbax_helpers.c  vimbax_helpers.h
